# microservice-api

./: README.md  pyproject.toml
src/ch06/kitchen/: app.py  config.py
src/ch06/orders/: app.py  oas.yaml
src/ch06/orders/api/: api.py  schemas.py
src/ch5/: openapi-ver1.yaml  openapi-ver2.yaml
src/orders/: app.py
src/orders/api/: api.py  schemas.py
