[project]
name = "microservice-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "blackjack", email = "kurawata414@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
